--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇺🇸 美国-1.95MB/s(Youtube:不良林), server: 38.75.136.135, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-1.03MB/s(Youtube:不良林), server: 38.121.43.71, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-858.3KB/s(Youtube:不良林), server: 38.68.134.85, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-202.6KB/s(Youtube:不良林), server: 38.114.114.67, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 波兰-422.0KB/s(Youtube:不良林), server: 217.30.10.67, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
-  - {name: 🇫🇷 法国-422.1KB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
-  - {name: 🇺🇸 美国-1.34MB/s(Youtube:不良林), server: 38.114.114.49, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-351.7KB/s(Youtube:不良林), server: 38.68.134.85, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.06MB/s(Youtube:不良林), server: 38.68.134.85, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇺🇸 美国-757.3KB/s(Youtube:不良林), server: 38.75.136.21, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-304.9KB/s(Youtube:不良林), server: 38.121.43.71, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-1.34MB/s(Youtube:不良林) 2, server: 38.75.136.21, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-1.34MB/s(Youtube:不良林), server: 38.75.136.21, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇺🇸 美国-288.1KB/s(Youtube:不良林), server: 38.121.43.71, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇺🇸 美国-832.4KB/s(Youtube:不良林), server: 38.64.138.145, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-858.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.6KB/s(Youtube:不良林)
       - 波兰-422.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-422.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-351.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-757.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-304.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-288.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-832.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-858.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.6KB/s(Youtube:不良林)
       - 波兰-422.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-422.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-351.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-757.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-304.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-288.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-832.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-858.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.6KB/s(Youtube:不良林)
       - 波兰-422.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-422.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-351.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-757.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-304.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-288.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-832.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-858.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.6KB/s(Youtube:不良林)
       - 波兰-422.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-422.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-351.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-757.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-304.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-288.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-832.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-858.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.6KB/s(Youtube:不良林)
       - 波兰-422.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-422.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-351.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-757.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-304.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-288.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-832.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-858.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.6KB/s(Youtube:不良林)
       - 波兰-422.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-422.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-351.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-757.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-304.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-288.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-832.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-858.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.6KB/s(Youtube:不良林)
       - 波兰-422.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-422.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-351.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-757.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-304.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-288.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-832.4KB/s(Youtube:不良林)
 rules:
