--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.95MB/s(Youtube:不良林), server: 38.75.136.135, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 波兰-669.9KB/s(Youtube:不良林), server: 217.30.10.65, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
+  - {name: 🇺🇸 美国-626.5KB/s(Youtube:不良林), server: 38.114.114.67, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-567.6KB/s(Youtube:不良林), server: 144.168.60.70, port: 252, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
   - {name: 🇺🇸 美国-1.03MB/s(Youtube:不良林), server: 38.121.43.71, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-858.3KB/s(Youtube:不良林), server: 38.68.134.85, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-202.6KB/s(Youtube:不良林), server: 38.114.114.67, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 波兰-422.0KB/s(Youtube:不良林), server: 217.30.10.67, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
-  - {name: 🇺🇸 美国-757.3KB/s(Youtube:不良林), server: 38.75.136.21, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-304.9KB/s(Youtube:不良林), server: 38.121.43.71, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-1.34MB/s(Youtube:不良林), server: 38.75.136.21, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-288.1KB/s(Youtube:不良林), server: 38.121.43.71, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇺🇸 美国-832.4KB/s(Youtube:不良林), server: 38.64.138.145, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇫🇷 法国-365.9KB/s(Youtube:不良林), server: 62.210.113.98, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-912.5KB/s(Youtube:不良林), server: 38.64.138.145, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-1.21MB/s(Youtube:不良林), server: 38.64.138.145, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-1.77MB/s(Youtube:不良林), server: 38.114.114.67, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: 38.114.114.67, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-575.5KB/s(Youtube:不良林), server: 38.86.135.27, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 波兰-669.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-626.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-567.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-858.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-202.6KB/s(Youtube:不良林)
-      - 波兰-422.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-757.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-288.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-832.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-365.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-912.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-575.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 波兰-669.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-626.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-567.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-858.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-202.6KB/s(Youtube:不良林)
-      - 波兰-422.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-757.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-288.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-832.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-365.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-912.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-575.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 波兰-669.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-626.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-567.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-858.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-202.6KB/s(Youtube:不良林)
-      - 波兰-422.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-757.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-288.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-832.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-365.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-912.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-575.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 波兰-669.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-626.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-567.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-858.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-202.6KB/s(Youtube:不良林)
-      - 波兰-422.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-757.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-288.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-832.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-365.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-912.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-575.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 波兰-669.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-626.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-567.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-858.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-202.6KB/s(Youtube:不良林)
-      - 波兰-422.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-757.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-288.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-832.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-365.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-912.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-575.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 波兰-669.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-626.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-567.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-858.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-202.6KB/s(Youtube:不良林)
-      - 波兰-422.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-757.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-288.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-832.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-365.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-912.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-575.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 波兰-669.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-626.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-567.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-858.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-202.6KB/s(Youtube:不良林)
-      - 波兰-422.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-757.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-288.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-832.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-365.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-912.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-575.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
