--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 波兰-669.9KB/s(Youtube:不良林), server: 217.30.10.65, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
-  - {name: 🇺🇸 美国-626.5KB/s(Youtube:不良林), server: 38.114.114.67, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-567.6KB/s(Youtube:不良林), server: 144.168.60.70, port: 252, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
-  - {name: 🇺🇸 美国-1.03MB/s(Youtube:不良林), server: 38.121.43.71, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇫🇷 法国-365.9KB/s(Youtube:不良林), server: 62.210.113.98, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-1.03MB/s(Youtube:不良林), server: 38.86.135.27, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-1.06MB/s(Youtube:不良林), server: 38.86.135.27, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: 38.86.135.27, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-271.0KB/s(Youtube:不良林), server: 38.68.134.85, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-423.7KB/s(Youtube:不良林), server: 38.114.114.69, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇺🇸 美国-912.5KB/s(Youtube:不良林), server: 38.64.138.145, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇺🇸 美国-1.21MB/s(Youtube:不良林), server: 38.64.138.145, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-1.77MB/s(Youtube:不良林), server: 38.114.114.67, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-669.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-626.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-567.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇫🇷 法国-365.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-271.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-423.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-912.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 波兰-669.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-626.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-567.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇫🇷 法国-365.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-271.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-423.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-912.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-669.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-626.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-567.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇫🇷 法国-365.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-271.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-423.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-912.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 波兰-669.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-626.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-567.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇫🇷 法国-365.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-271.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-423.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-912.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 波兰-669.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-626.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-567.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇫🇷 法国-365.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-271.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-423.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-912.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-669.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-626.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-567.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇫🇷 法国-365.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-271.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-423.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-912.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-669.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-626.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-567.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇫🇷 法国-365.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-271.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-423.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-912.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
