--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1012.0KB/s(Youtube:不良林), server: 38.75.136.21, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-810.0KB/s(Youtube:不良林), server: 38.64.138.145, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇨🇳 中国-742.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.35MB/s(Youtube:不良林), server: 38.68.135.18, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-1.03MB/s(Youtube:不良林), server: 38.75.136.21, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-218.9KB/s(Youtube:不良林), server: 38.86.135.27, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-744.0KB/s(Youtube:不良林), server: 38.121.43.71, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-271.0KB/s(Youtube:不良林), server: 38.68.134.85, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-902.1KB/s(Youtube:不良林), server: 38.68.134.85, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-940.8KB/s(Youtube:不良林), server: 38.114.114.67, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-912.5KB/s(Youtube:不良林), server: 38.64.138.145, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-1.21MB/s(Youtube:不良林), server: 38.64.138.145, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-1.77MB/s(Youtube:不良林), server: 38.114.114.67, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-414.2KB/s(Youtube:不良林), server: 38.64.138.145, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-1.51MB/s(Youtube:不良林), server: 38.114.114.67, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: 38.114.114.67, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-575.5KB/s(Youtube:不良林), server: 38.86.135.27, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-705.5KB/s(Youtube:不良林), server: 38.86.135.27, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1012.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-810.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-742.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-218.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-744.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-271.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-902.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-940.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-912.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-414.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-575.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-705.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1012.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-810.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-742.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-218.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-744.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-271.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-902.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-940.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-912.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-414.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-575.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-705.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1012.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-810.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-742.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-218.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-744.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-271.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-902.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-940.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-912.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-414.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-575.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-705.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1012.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-810.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-742.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-218.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-744.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-271.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-902.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-940.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-912.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-414.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-575.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-705.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1012.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-810.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-742.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-218.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-744.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-271.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-902.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-940.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-912.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-414.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-575.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-705.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1012.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-810.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-742.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-218.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-744.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-271.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-902.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-940.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-912.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-414.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-575.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-705.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1012.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-810.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-742.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-218.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-744.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-271.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-902.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-940.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-912.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-414.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-575.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-705.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
